--- a/src/app.css
+++ b/src/app.css
@@ -31,16 +31,16 @@ body {
 
 /* Left and right column */
 .left {
-  width: 20%;
+  width: 30%;
 }
 
 /* Middle column */
 .middle {
-  width: 40%;
+  width: 50%;
 }
 
 .right {
-  width: 40%;
+  width: 20%;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -72,6 +72,45 @@ body {
 .board {
   background-color: #fff;
   padding: 2em;
+}
+
+.toMove {
+  font-size: 1.5rem;
+  /* display: flex;
+  align-items: center; */
+}
+
+.toMoveIndicator {
+  display: inline;
+  padding-right: 0.5rem;
+}
+
+.toMoveImage {
+  height: 1.15rem;
+  width: 1.15rem
+}
+
+.mover {
+  vertical-align: middle;
+}
+
+.historyState {
+  background-color: greenyellow;
+  padding: 1rem;
+}
+
+.currentState {
+  background-color: ivory;
+  padding: 1rem;
+}
+
+.exploreState {
+  background-color: lavenderblush;
+  padding: 1rem;
+}
+
+.uiState {
+  padding: 1rem;
 }
 
 .movesTable {
@@ -107,6 +146,39 @@ body {
   color: red;
 }
 
+.error {
+  color: red;
+}
+
 .moveMessage {
-  color: pink;
+  color: blue;
+}
+
+.challenge {
+  display: block;
+}
+
+.pickOneOfVariants {
+  padding-left: 1rem;
+}
+
+.pickOneOfVariant {
+  padding-left: 1rem;
+}
+
+.pickAnyOfVariants {
+  padding-left: 1rem;
+}
+
+.pickAnyOfVariant {
+  padding-left: 1rem;
+}
+
+.pickOneOfColors, .pickOneOfColorsLevel, .pickAnnotation, .chooseAnnotationLevel {
+  padding-left: 1rem;
+}
+
+.radios {
+  display: block;
+  padding-left: 1rem;
 }
