Game scores, pieces, stashes and move results. Lot's of testing still to be done.

--- a/src/app.css
+++ b/src/app.css
@@ -98,6 +98,11 @@ body {
   width: 1.15rem
 }
 
+.playerImage {
+  height: 0.8rem;
+  width: 0.8rem
+}
+
 .mover, .playerIndicator {
   vertical-align: middle;
 }
