--- a/src/app.css
+++ b/src/app.css
@@ -446,11 +446,33 @@ a:hover {
 
 .moveButtons {
   display: inline-block;
-  border-style: solid;
+  border-style: none;
   border-width: 2px;
   border-color: black;
   margin-left: 2em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
+
+.famnav {
+  display: inline-block;
+  width: 1.5em;
+  background-color: var(--main-fg-color);
+  color: var(--main-bg-color);
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  border-radius: 0.3em;
+  margin-left: 0.1em;
+  margin-right: 0.1em;
+  padding: 0 0.3em 0 .3em;
+  text-align: center;
+}
+
+.disabled {
+  opacity: 0.65;
+}
+
 .gameMoveFocus {
   background-color: #bbb;
 }
