Bye-bye bootstrap. And good riddance!

--- a/src/index.css
+++ b/src/index.css
@@ -21,25 +21,11 @@ body {
   background-color: var(--main-bg-color);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  box-sizing: border-box;
 }
 
-.btn-primary, .btn-primary:visited, .btn-primary:focus {
-  color: black;
-  background-color: var(--bg-color2);
-  box-shadow: none;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-.btn-primary:visited {
-  color: black;
-  background-color: var(--bg-color2);
-  border-color: black;
-}
-
-.btn-primary:hover {
-  color: white;
-  background-color: var(--main-fg-color);
-  border-color: var(--main-fg-color);
-}
