--- a/src/app.css
+++ b/src/app.css
@@ -1,46 +1,8 @@
-/*
-:root {
-  --main-bg-color: #CAFAFE;
-}
 
-:root {
-  --main-fg-color: #FC4445;
-}
-
-body {
-  background-color: var(--main-bg-color);
-}
-*/
-
-/*
-.column {
-  float: left;
-}
-
-.left {
-  width: 30%;
-}
-
-.middle {
-  width: 50%;
-}
-
-.right {
-  width: 20%;
-}
-*/
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-/*
-@media screen and (max-width: 600px) {
-  .column.side, .column.middle {
-    width: 100%;
-  }
-}
-*/
-
-.container {
-  max-width: 95%;
+.apHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #logo {
@@ -49,10 +11,9 @@ body {
   padding-bottom: 1vh;
 }
 
-#login-button, #logout-button {
-  position: absolute;
-  top: 30%;
-  left: 50%;
+.loginOut {
+  margin-right: 3%;
+  margin-bottom: 2ex;
 }
 
 .apButton {
@@ -74,7 +35,12 @@ body {
   background: var(--main-fg-color);
 }
 
+.inlineButton {
+  margin-left: 1em;
+}
+
 .main {
+  box-sizing: border-box;
   flex: 1;
   display: flex;
 }
@@ -212,7 +178,6 @@ h1 {
 }
 
 .dashboardContainer2 {
-  margin-top: 2em;
   width: 50%;
   min-width: 400px;
 }
@@ -281,6 +246,11 @@ h1 {
   margin: 0em 1.5em;
 }
 
+li {
+  position: relative;
+  list-style-type: none;
+}
+
 .apBullet {
   color: var(--secondary-color-1);
   font-size: 10px;
@@ -291,18 +261,13 @@ h1 {
 
 a { color: inherit; }
 
-/*
-a:link {
-  color: black;
-}
-*/
-
 a:hover {
   color: inherit;
   text-decoration: underline;
 }
 
-.lisComment {
+.listComment {
+  margin-top: 1em;
   margin-left: 2em;
 }
 
@@ -634,4 +599,65 @@ a:hover {
 .radios {
   display: block;
   padding-left: 1rem;
+}
+
+.apModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
+  
+.apModalMain {
+  margin: 1em;
+  border-radius: 0.7em;
+  border: none;
+  position: fixed;
+  background: white;
+  width: 40%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.apModalContent {
+  display: block;
+}
+
+.apModalHeader {
+  display: flex;
+  justify-content: space-between;
+  background: #f3f3f3;
+  padding: 0.5em 0.5em 0.5em 0.7em;
+  border-radius: 0.7em 0.7em 0 0;
+  border: none;
+}
+
+.apModalHeaderTitle {
+  font-weight: bold;
+}
+
+.apModalBody {
+  padding: 0.5em;
+}
+
+.apModalFooter {
+  display: flex;
+  justify-content: center;
+}
+
+.apModalFooterButtons {
+  margin: 0.5em;
 }
