--- a/src/app.css
+++ b/src/app.css
@@ -73,7 +73,7 @@ a:active {
   margin-top: 1em;
   margin-right: 1.5em;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .article {
@@ -598,7 +598,7 @@ th .player {
 .challenge {
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
@@ -654,11 +654,19 @@ div.radios label {
   border: none;
   position: fixed;
   background: white;
-  width: 40%;
   height: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+
+.apModalMain.large {
+  width: 40%;
+  min-width: 400px;
+}
+
+.apModalMain.small {
+  width: 30em;
 }
 
 .display-block {
