--- a/src/app.css
+++ b/src/app.css
@@ -423,14 +423,14 @@ a:hover, .aboutText a {
 
 .standingChallengesTable th {
   border: 1px solid var(--main-fg-color-lighter);
-  text-align: left;
+  text-align: center;
   padding: 8px;
   background-color: var(--secondary-color-1-bg)
 }
 
 .standingChallengesTable td {
   border: 1px solid var(--main-fg-color-lighter);
-  text-align: left;
+  text-align: center;
   padding: 8px;
 }
 
