--- a/src/app.css
+++ b/src/app.css
@@ -505,8 +505,37 @@ th .player {
   width: 0.8rem
 }
 
+.winnerImage {
+  padding-left: 0.2rem;
+  padding-bottom: 0.1rem;
+  height: 0.6rem;
+  width: 0.7rem
+}
+
+.winnerImage2 {
+  padding-left: 0.2rem;
+  height: 0.6rem;
+  width: 0.8rem
+}
+
+.winnerButtonImage {
+  margin-top: 0.4rem;
+  margin-left: 0.7rem;
+  height: 1rem;
+  width: 1rem;
+}
+
+
+.winningColorButton {
+  display: inline-block;
+}
+
 .playerIndicator {
   vertical-align: middle;
+}
+
+.submitOrMark {
+  display: flex;
 }
 
 .mover {
