--- a/src/app.css
+++ b/src/app.css
@@ -855,3 +855,11 @@ div.radios label {
   padding-top: 0.1em;
   padding-bottom: 0.1em;
 }
+
+/* tr.chatPlayer {
+
+} */
+
+tr.chatSystem {
+    opacity: 0.5;
+}
