--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,8 @@
-a:link {
-  text-decoration: none;
+a {
+    color: inherit;
 }
 
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-a:active {
-  text-decoration: underline;
-}
-
-.metaGame a:link {
+.content * a {
     text-decoration: underline;
 }
 
@@ -24,10 +12,8 @@ a:active {
   align-items: center;
 }
 
-#logo {
-  height: 10vh;
-  padding-top: 2vh;
-  padding-bottom: 1vh;
+.navbar {
+    min-height: 10vh;
 }
 
 .loginOut {
@@ -58,36 +44,9 @@ a:active {
   margin-left: 1em;
 }
 
-.main {
-  box-sizing: border-box;
-  flex: 1;
-  display: flex;
-}
-
-.main > article {
-  flex: 1;
+#main > article {
   /* font-size: 93.75%; */
   font-size: 87.5%;
-}
-
-.main > nav {
-  flex: 0 0 6vw;
-  min-width: 5em;
-  order: -1;
-  padding: 1em;
-  border-right: 2px solid #1A3E6F;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  /* justify-content: flex-end; */
-}
-
-.main > nav > li {
-  width: 100%;
-  min-width: 3em;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
 }
 
 .article {
@@ -128,12 +87,6 @@ h1 {
 }
 */
 
-.metaGames {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
 .goToGame {
   width: 100%;
   margin-bottom: 0.8em;
@@ -145,12 +98,8 @@ goToGameLabel {
 
 .metaGame {
   max-width: 500px;
-  flex-grow: 1;
   padding: 0.25em 1em;
   margin: 0.25em 0.5em;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
 }
 
 .theMetaGame {
@@ -304,24 +253,12 @@ goToGameLabel {
   margin: 0em 1.5em;
 }
 
-li {
-  position: relative;
-  list-style-type: none;
-}
-
 .apBullet {
   color: var(--secondary-color-1);
   font-size: 10px;
   position: relative;
   bottom: 2px;
   padding-right: 0.7em;
-}
-
-a { color: inherit; }
-
-a:hover, .aboutText a {
-  color: inherit;
-  text-decoration: underline;
 }
 
 .listComment {
