--- a/src/app.css
+++ b/src/app.css
@@ -634,16 +634,8 @@ th .player {
   background-color: #bbb;
 }
 
-.gameMoveUnknownOutcome {
+.gameMoveExplore {
   color: #888;
-}
-
-.gameMoveLoss {
-  color: #f00a28;
-}
-
-.gameMoveWin {
-  color:#7df00a;
 }
 
 .error {
